# karaoke-studio

./: .gitignore  .gitmodules  AGENTS.md  AUTHORS.md  CHANGELOG.md  NOTICE  README.md  app.py
.github/: CODEOWNERS
.github/workflows/: release.yml
docs/: NicokaraMaker3字幕布局逆向.md  SUG与字幕渲染模块-Python走字差异.md  release-process.md  字幕渲染-管线优化调研.md  字幕渲染-预渲染帧缓存方案评估.md  字幕渲染核心C++化方案.md  字幕渲染模块-需求设计.md  歌词打轴子模块-karaoke_preview走字逻辑.md
krok_helper/: __init__.py  __main__.py  audio_alignment.py  cli.py  config.py  ffmpeg.py  gui_qt.py  lyrics.py  models.py  network.py  pipeline.py  runtime_profile.py  settings.py  stdio.py  sug_compat.py  theme_workbench.py
krok_helper/lyrics_timing/: .gitattributes  .gitignore  .pre-commit-config.yaml  __init__.py  build_all.py  dist_current_freeze.txt  pyproject.toml  requirements-dev.txt  setup_env.bat
krok_helper/subtitle_render/: __init__.py  __main__.py  models.py  native_backend.py  native_protocol.py  project_store.py  settings_bridge.py  subtitle_sources.py
krok_helper/updater/: __init__.py  installer.py  settings.py  sources.py  worker.py
krok_helper/updater_app/: __init__.py  build_updater.py  main.py
krok_helper/video_download/: __init__.py  bilibili_auth.py  cookie_manager.py  download_task.py  format_parser.py  (+3 more)
native/subtitle_renderer/: CMakeLists.txt  README.md
native/subtitle_renderer/src/: main.cpp
native/subtitle_renderer_probe/: CMakeLists.txt  README.md
native/subtitle_renderer_probe/src/: main.cpp
scripts/: bench_native_renderer.py  bench_parallel_paint.py  bench_render.py  build_macos.command  build_windows.bat  compare_export_backends.py  compare_preview_backends.py  probe_multiprocess_preview.py  probe_native_preview_stats.py  profile_preview.py  run_native_qpainter_probe.ps1  run_native_renderer_smoke.ps1
tests/: test_audio_alignment_encoding.py  test_cli_args.py  test_ffmpeg_paths.py  test_ffmpeg_probe.py  test_import_lyrics_to_sug.py  test_lyrics_preview_title.py  test_lyrics_query_extraction.py  test_lyrics_timing_namespaces.py  test_lyrics_translation.py  test_settings_atomic_io.py  test_stdio.py  test_subtitle_render_animator.py  test_subtitle_render_encoder_select.py  test_subtitle_render_layers.py  test_subtitle_render_loaders.py  test_subtitle_render_lrc_parser.py  test_subtitle_render_native_benchmark.py  test_subtitle_render_native_export.py  test_subtitle_render_native_protocol.py  test_subtitle_render_painter.py  test_subtitle_render_playback.py  test_subtitle_render_preview_async.py  test_subtitle_render_preview_media.py  test_subtitle_render_project_store.py  test_subtitle_render_property_panel.py  test_subtitle_render_quantize.py  test_subtitle_render_renderer.py  test_subtitle_render_timeline.py  test_subtitle_render_transport.py  test_sug_embedded_shortcuts.py  test_utaten_lyrics.py  test_workbench_updater.py  test_workbench_updater_apply.py
(+151 files in other folders)
